test(service): add service layer test